Fix config to consume task events in batch mode